# A2DP_HIFI

./: CMakeLists.txt
components/a2dp_component/: A2DPVolumeControl.h  BluetoothA2DP.h  BluetoothA2DPCommon.cpp  BluetoothA2DPCommon.h  BluetoothA2DPSink.cpp  BluetoothA2DPSink.h  BluetoothA2DPSinkQueued.cpp  BluetoothA2DPSinkQueued.h  BluetoothA2DPSource.cpp  BluetoothA2DPSource.h  CMakeLists.txt  I2SCommon.cpp  I2SComon.h  I2SInterface.cpp  I2SInterface.h  I2SPattern.h  II2Sinterface.h  Kconfig  SPPInterface.cpp  SPPInterface.h  SoundData.cpp  config.h
main/: BluetoothA2DPSink32.h  CMakeLists.txt  ControlQueue.cpp  ControlQueue.h  Kconfig.projbuild  main.cpp
main/a2dp_component/: A2DPVolumeControl.h  BluetoothA2DPCommon.cpp  BluetoothA2DPCommon.h  BluetoothA2DPSink.cpp  BluetoothA2DPSink.h  BluetoothA2DPSinkQueued.cpp  BluetoothA2DPSinkQueued.h  BluetoothA2DPSource.cpp  BluetoothA2DPSource.h  SoundData.cpp  SoundData.h
